# py2pack

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  PKG-INFO  README  README.rst  egg2rpm  egg2rpm.py  fabfile.py  py2pack  py2pack.py  pyproject.toml  python-py2pack.spec  python-setuptools-scm.conf  python-setuptools-scm.spec  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
$(outdir)/: python-py2pack-0.8.7-0.src.rpm
.github/workflows/: main.yml  tox.yml  tox1.yml
data/: opensuse.spec.template
doc/: Makefile  opensuse.spec.template  py2pack.1  py2pack.html  py2pack.xml.in
doc/source/: cli.rst  conf.py  index.rst  templates.rst
doc/src/: py2pack.xml.in
docs/: py2pack.html
egg2rpm/: egg2rpm.py
py2pack/: .__init__.py.kate-swp  __init__.py  get_metadata.py  parse.py  proxy.py  py2pack.py  requires.py  setup.py  spdx_license_map.json  spdx_license_map.p  suse_spdx_license_map.p  utils.py  version.py
py2pack/templates/: el.spec  fedora.spec  mageia.spec  opensuse-legacy.spec  opensuse.dsc  opensuse.spec
scripts/: py2pack
templates/: opensuse.dsc
test/: test_py2pack.py  test_requires.py  test_template.py  test_utils.py
test/examples/: poetry-fedora-augmented.spec  poetry-mageia.spec  poetry-opensuse-augmented.spec  poetry-opensuse-legacy.spec  poetry-opensuse.dsc  poetry-opensuse.spec  py2pack-fedora-augmented.spec  py2pack-fedora.spec  py2pack-mageia.spec  py2pack-opensuse-augmented.spec  py2pack-opensuse-legacy.spec  py2pack-opensuse.dsc  py2pack-opensuse.spec  py2pack-opensuse.spec~  sampleproject-fedora-augmented.spec  sampleproject-fedora.spec  sampleproject-mageia.spec  sampleproject-opensuse-augmented.spec  sampleproject-opensuse-legacy.spec  sampleproject-opensuse.dsc  sampleproject-opensuse.spec
tools/: obs-from-pypi.py  update-spdx.py
