[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2pack"
description = "Generate distribution packages from PyPI"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    {name = "Sascha Peilicke", email = "sascha@peilicke.de"},
    {name = "Thomas Bechtold", email = "thomasbechtold@jpberlin.de"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Pre-processors",
]
dependencies = [
    "Jinja2",
    "backports.entry_points_selectable",
    "setuptools",
    "metaextract",
    "packaging",
    "pypi-search",
    "requests",
    "tomli; python_version < '3.11'",
]
requires-python = ">=3.6"
dynamic = ['version']


[project.urls]
homepage = "http://github.com/openSUSE/py2pack"

[project.scripts]
py2pack = "py2pack:main"

[tool.hatch.version]
path = "py2pack/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "py2pack/",
    "test/",
    "doc/",
    "test-requirements.txt",
    "tox.ini"
]

[tool.hatch.envs.doc]
dependencies = [
    "Sphinx>=1.2.1",
    "sphinxcontrib.programoutput"
]

[tool.hatch.envs.doc.scripts]
clean = "rm -rf doc/build"
build = "sphinx-build -b html -W doc/source doc/build"
open = "python -m http.server --directory doc/build"

[tool.hatch.envs.updatespdx]
dependencies = [
    "lxml[cssselect]",
    "requests",
]
[tool.hatch.envs.updatespdx.scripts]
update = "python tools/update-spdx.py"
