[metadata]
name = py2pack
summary = Generate distribution packages from PyPI
description-file =
    README.rst
author = Sascha Peilicke
author-email = saschpe@gmx.de
home-page = http://github.com/saschpe/py2pack
classifier =
   Development Status :: 4 - Beta,
   Environment :: Console,
   Intended Audience :: End Users/Desktop,
   Intended Audience :: Developers,
   Intended Audience :: System Administrators,
   License :: OSI Approved :: GNU General Public License (GPL),
   Operating System :: POSIX,
   Programming Language :: Python,
   Programming Language :: Python :: 2.6,
   Programming Language :: Python :: 2.7,
   Programming Language :: Python :: 3.3,
   Topic :: Software Development :: Code Generators,
   Topic :: Software Development :: Pre-processors,

[files]
packages =
    py2pack

[entry_points]
console_scripts =
    py2pack = py2pack:main

[pbr]
warnerrors = true

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

