[metadata]
name = py2pack
summary = Generate distribution packages from PyPI
version = 0.8.7
description-file =
    README.rst
author = Sascha Peilicke, Thomas Bechtold
author-email = sascha@peilicke.de, thomasbechtold@jpberlin.de
home-page = http://github.com/openSUSE/py2pack
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Pre-processors

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    py2pack = py2pack:main

[files]
packages =
    py2pack
package-data = py2pack = templates/* spdx_license_map.p

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
